# strawberry-subscription-auth

./: README.md  azure-pipelines.yml  docker-compose.yml
strawberry-subscription-auth/: dockerfile  pyproject.toml  runserver.py
strawberry-subscription-auth/strawberry_subscription_auth/: custom_auth.py  main.py  schema.graphql  strawberry_schema.py
strawberry-subscription-auth/tests/: test_strawberry_subscription_auth.py
